--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,30 @@
-# Database Configuration
-DB_NAME=your_database_name
-DB_USER=your_database_user
-DB_PASSWORD=your_database_password
-DB_HOST=your_database_host
-DB_PORT=your_database_port
+PROJECT_NAME=blog
+DEBUG=True
+DJANGO_SECRET_KEY='django-insecure-3kvz4hz5(s=zx7$-x$n-0_7fjttzj@0$k(%n)&gc741+jpo'
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,192.168.1.102,192.168.254.21
 
-# Email Configuration
-EMAIL_HOST=smtp.your-email-provider.com
-EMAIL_USE_TLS=True
-EMAIL_PORT=587
-EMAIL_HOST_USER=your_email@example.com
-EMAIL_HOST_PASSWORD=your_email_password
-DEFAULT_FROM_EMAIL=your_email@example.com
-SERVER_EMAIL=your_email@example.com
+CORS_ALLOW_ALL_ORIGINS=False
+CORS_ALLOWED_ORIGINS=http://localhost:3001/
+
+# Database Configuration
+DB_NAME=django_blog_db
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=db
+DB_PORT=5432
+
+# in bytes
+MAX_UPLOAD_SIZE=5242880
+BLOG_MEDIA_MAX_UPLOAD_SIZE=5242880
+WEBSITE_MEDIA_MAX_UPLOAD_SIZE=5242880
+# in minutes
+AUTH_LINK_EXP_TIME=10
+
+FRONTEND_BASE_URL=http://localhost:3000/
+SOCIAL_SECRET=blog
 
 # Redis Configuration
-REDIS_HOST=your_redis_host
+REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_DB=0
-
-# CORS Configuration
-CORS_ALLOW_ALL_ORIGINS=False
-CORS_ALLOWED_ORIGINS=["http://localhost:3000", "https://your-frontend-domain.com"]
-
-# Frontend Base URL
-FRONTEND_BASE_URL=https://your-frontend-domain.com
-
-# Social Media OAuth Configuration
-SOCIAL_SECRET=your_social_secret
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+REDIS_DB=1
+REDIS_PASSWORD=admin
