--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ close_void_tags = true
 format_css = true
 format_js = true
 # TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
-ignore = "H006,H030,H031,T002"
+ignore = "H006,H030,H031,T002,PLR0913"
 include = "H017,H035"
 indent = 2
 max_line_length = 119
@@ -53,8 +53,8 @@ indent_size = 2
 [tool.djlint.js]
 indent_size = 2
 
-[tool.ruff]
 # Exclude a variety of commonly ignored directories.
+[tool.ruff]
 exclude = [
     ".bzr",
     ".direnv",
@@ -146,10 +146,11 @@ ignore = [
   "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
   "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
   "SIM102", # sometimes it's better to nest
-  "UP038" # Checks for uses of isinstance/issubclass that take a tuple
+  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
           # of types for comparison.
           # Deactivated because it can make the code slow:
           # https://github.com/astral-sh/ruff/issues/7871
+"PLR0913",
 ]
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
