--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ AUTH_LINK_EXP_TIME=10
 
 FRONTEND_BASE_URL=http://localhost:3000/
 SOCIAL_SECRET=blog
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
 
 # Redis Configuration
 REDIS_HOST=redis
