--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-PROJECT_NAME=blog
+PROJECT_NAME=IMS
 DEBUG=True
 DJANGO_SECRET_KEY='django-insecure-3kvz4hz5(s=zx7$-x$n-0_7fjttzj@0$k(%n)&gc741+jpo'
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,192.168.1.102,192.168.254.21
@@ -7,10 +7,10 @@ CORS_ALLOW_ALL_ORIGINS=False
 CORS_ALLOWED_ORIGINS=http://localhost:3001/
 
 # Database Configuration
-DB_NAME=django_blog_db
+DB_NAME=ims_db
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_HOST=db
+DB_HOST=localhost
 DB_PORT=5432
 
 # in bytes
